# voice-control

./: .gitignore  README.md  audio_processing.py  config.py  dataset.py  diagnostics.py  download_model.py  finetune.py  inference.py  keyboard_backend.py  log_config.py  model.py  performance.ipynb  pyproject.toml  requirements.txt  train.py  ui.py
models/: voice_command_model.pt
scripts/: download_model.py
voice_control/: config.py  diagnostics.py  log_config.py
voice_control/audio/: io.py  processing.py
voice_control/runtime/: dashboard.py  inference.py  ui.py
voice_control/training/: dataset.py  finetune.py  train.py
